# mosaic

./: .gitignore  MULTI-MACHINE-DOCKERS.md  README.md  SECURITY.md  TECHNICAL.md  run_mosaic.sh
mosaic-java/: README.md  pom.xml
mosaic-java/src/main/java/com/jiva/mosaic/: Main.java
mosaic-java/src/test/java/com/jiva/mosaic/: MainTest.java
mosaic-python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
mosaic-python/data/: inference_result_1765438820.png.npy
mosaic-python/mosaic/: __init__.py  help_text.py  inference_advice.py  inference_aggregation.py  mosaic.py  repl_commands.py  session_commands.py  textual_repl.py
mosaic-python/mosaic_comms/: __init__.py  beacon.py
mosaic-python/mosaic_config/: README.md  __init__.py  config.py  state.py  state_manager.py  state_utils.py
mosaic-python/mosaic_model_runtime/: __init__.py  model_factory.py  predefined_models.py
mosaic-python/mosaic_planner/: __init__.py  model_execution.py  model_planner.py  planner.py  state.py  training_hyperparameters.py
mosaic-python/mosaic_stats/: __init__.py  benchmark.py  performance_backup.json  stats_collector.py
mosaic-python/tests/: __init__.py  conftest.py  create_dummy_data.py  dummy_benchmark_data.json  test_beacon.py  test_benchmark.py  test_config.py  test_data_segmentation.py  test_distribution_retry.py  test_e2e_training_inference.py  test_inference_aggregation.py  test_model_execution.py  test_model_factory.py  test_model_planner.py  test_mosaic.py  test_planner.py  test_planner_serialization.py  test_predefined_models.py  test_repl_commands.py  test_session_commands.py  test_state_manager.py  test_state_utils.py  test_stats_collector.py
mosaic-python/tests/certs/: ca.crt  server.crt  server.key
mosaic-security/: generate_certs.bat  generate_certs.ps1  generate_certs.py  generate_certs.sh  requirements.txt
