[project]
name = "mosaic-python"
version = "0.1.0"
description = "A collection of Python modules"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "psutil>=5.9.0",
    "stream-unzip>=0.0.60",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "torch-geometric>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosaic_comms", "mosaic_config", "mosaic", "mosaic_planner", "mosaic_stats", "mosaic_model_runtime"]

[tool.uv]
dev-dependencies = [
    "build>=1.0.0",
    "pytest>=8.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[tool.uv.workspace]
# Add module paths here as you create them
# Example: members = ["modules/module1", "modules/module2"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# Add project root to Python path for uv run pytest compatibility
pythonpath = ["."]
filterwarnings = [
    # Suppress torch_geometric deprecation warning (third-party library)
    "ignore::DeprecationWarning:torch_geometric",
    # Suppress torch.onnx.export warnings about dynamic_axes with dynamo=True
    # The current code works fine with dynamic_axes, and switching to dynamic_shapes
    # would require more extensive testing
    "ignore::UserWarning:mosaic_model_runtime.predefined_models",
]

